Bug #46807 subselect test fails on PB-2 with a crash
Submitted: 19 Aug 2009 11:31 Modified: 15 Sep 2009 20:23
Reporter: Andrei Elkin Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0 OS:Any
Assigned to: Georgi Kodinov Target Version:5.0+
Tags: test failuree
Triage: Triaged: D1 (Critical)

[19 Aug 2009 11:31] Andrei Elkin
Description:
Failure on PB-2

http://pb2.norway.sun.com/web.py?template=mysql_show_test_failure&test_failure_id=2283201

has these details

Where 	Build 	Test 	Run 	Suite 	Case 	Mode 	When
mysql-5.0-bugteam
490134	binary-debug_max-hpux11.31-ia64-tar-gz
492986 til01	test-debug_max-hpux11.31-ia64
494045 til01	n_stm		subselect	None	2009-08-13 22:40:58
- Show/hide test output -
Original output (2 similar failures out of 2283651 records)

subselect                      [ fail ]

mysqltest: At line 3118: query '$start $end' failed with wrong errno 2013: 'Lost
connection to MySQL server during query', instead of 0...

The result from queries just before the failure was:
< snip >
DROP TABLE t1,t2;
create table t1(a int,b int,key(a),key(b));
insert into t1(a,b) values (1,2),(2,1),(2,3),(3,4),(5,4),(5,5),
(6,7),(7,4),(5,3);

How to repeat:
Look at the url.
[19 Aug 2009 14:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/81087

2790 Georgi Kodinov	2009-08-19
      Bug #46807: subselect test fails on PB-2 with a crash
      
      The check for stack overflow was independent of the size of the 
      structure stored in the heap. 
      Fixed by adding sizeof(PARAM) to the requested free heap size.
[21 Aug 2009 14:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/81310

2794 Georgi Kodinov	2009-08-19
      Bug #46807: subselect test fails on PB-2 with a crash
      
      The check for stack overflow was independent of the size of the 
      structure stored in the heap. 
      Fixed by adding sizeof(PARAM) to the requested free heap size.
[2 Sep 2009 10:25] Bugs System
Pushed into 5.0.86 (revid:joro@sun.com-20090902102337-n5rw8227wwp5cpx8) (version source
revid:joro@sun.com-20090819145343-6zwt81jfkypa751n) (merge vers: 5.0.86) (pib:11)
[2 Sep 2009 16:41] Bugs System
Pushed into 5.1.39 (revid:joro@sun.com-20090902154533-8actmfcsjfqovgsb) (version source
revid:joro@sun.com-20090827074635-lcg80n5ee98d9y8j) (merge vers: 5.1.39) (pib:11)
[14 Sep 2009 16:03] Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090914155317-m1g9wodmndzdj4l1) (version
source revid:alik@sun.com-20090914155317-m1g9wodmndzdj4l1) (merge vers: 5.4.4-alpha)
(pib:11)
[15 Sep 2009 20:23] Paul DuBois
Noted in 5.0.86, 5.1.39, 5.4.4 changelogs.

Stack overflow checking did not account for the size of the structure
stored in the heap.
[1 Oct 2009 5:58] Bugs System
Pushed into 5.1.39-ndb-6.3.28 (revid:jonas@mysql.com-20091001055605-ap2kiaarr7p40mmv)
(version source revid:jonas@mysql.com-20091001055605-ap2kiaarr7p40mmv) (merge vers:
5.1.39-ndb-6.3.28) (pib:11)
[1 Oct 2009 7:25] Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:jonas@mysql.com-20091001072547-kv17uu06hfjhgjay)
(version source revid:jonas@mysql.com-20091001071652-irejtnumzbpsbgk2) (merge vers:
5.1.39-ndb-7.0.9) (pib:11)
[1 Oct 2009 13:25] Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091001123013-g9ob2tsyctpw6zs0)
(version source revid:jonas@mysql.com-20091001123013-g9ob2tsyctpw6zs0) (merge vers:
5.1.39-ndb-7.1.0) (pib:11)
[5 Oct 2009 10:50] Bugs System
Pushed into 5.1.39-ndb-6.2.19 (revid:jonas@mysql.com-20091005103850-dwij2dojwpvf5hi6)
(version source revid:jonas@mysql.com-20090930185117-bhud4ek1y0hsj1nv) (merge vers:
5.1.39-ndb-6.2.19) (pib:11)
[7 Oct 2009 14:44] Paul DuBois
The 5.4 fix has been pushed to 5.4.3.