Bug #46807: subselect test fails on PB-2 with a crash

The check for stack overflow was independent of the size of the 
structure stored in the heap. 
Fixed by adding sizeof(PARAM) to the requested free heap size.